Fix images distortion (#284)

--- a/assets/_sass/_image.scss
+++ b/assets/_sass/_image.scss
@@ -2,7 +2,7 @@
   //Article Images
   img {
     max-width: 100% !important;
-    width: 100% !important;
+    width: auto;
     display: block;
     padding: 10px;
     margin: 10px auto 5px;
